re PR debug/21022 ([4.0 only] ICE while compiling GdkFontMetrics.class with stabs debugging)

2005-04-19  Andrew Haley  <aph@redhat.com>

        PR java/21022
        * dbxout.c (dbxout_type_fields): Check DECL_IGNORED_P before
        looking at a field's bitpos.

From-SVN: r98926